Fixed closed question alignment

--- a/nederlands-code/src/components/closedQuestion.css
+++ b/nederlands-code/src/components/closedQuestion.css
@@ -5,7 +5,7 @@ ul {
 .closed-question-btn {
     display: inline-block;
     margin-bottom: 10px;
-    width: 150%;
+    width: 300px;
 }
 
 .closed-question-container {
